changed customer logos to be one img temporarily due to column alignment bug

--- a/app/styles/app/landing.sass
+++ b/app/styles/app/landing.sass
@@ -115,9 +115,6 @@
     .left
       text-align: left
 
-    img
-      margin: 0 30px 0 30px
-
   .recent-builds
     background-color: #f4f3eb
     text-align: center
